# aisw-capstone25-lamping

./: README.md
001 Report/캡스톤 디자인 I/: 2025-1 산학연계 캡스톤 디자인 계획보고서.hwpx  2025-1 산학연계캡스톤디자인 캡스톤 중간보고서_램핑이.hwpx
001 Report/캡스톤 디자인 II/: 2025-2 산학연계캡스톤디자인 캡스톤 중간보고서_램핑이.hwpx
002 Presentation/캡스톤 디자인 I/: 캡스톤 디자인 1학기 계획 발표.pptx  캡스톤 디자인 1학기 중간 발표.pptx
002 Presentation/캡스톤 디자인 II/: 캡스톤 디자인 2학기 계획 발표.pptx  캡스톤 디자인 2학기 중간 발표.pptx
003 Code/: capstone2.pgm  capstone2.yaml
003 Code/App/: 캡스톤 모바일 앱  Yaml 파일 코드.txt  캡스톤 모바일 앱 코드.txt
003 Code/turtlebot3_cartographer/rviz/: tb3_cartographer.rviz
003 Code/turtlebot3_motion/: package.xml  setup.py
003 Code/turtlebot3_motion/config/: nav2_params.yaml
003 Code/turtlebot3_motion/launch/: yolo_launch.launch.py
003 Code/turtlebot3_motion/turtlebot3_motion/: camera_check.py  camera_compressor_node.py  sim_camera_bridge.py  static_obstacle_node.py  tb3_bookmark_bridge.py  warning_sound_node.py  yolo_node.py
003 Code/turtlebot3_navigation2/param/: waffle_pi.yaml
003 Code/virtual_obstacle_layer/: CMakeLists.txt  package.xml  plugin.xml
003 Code/virtual_obstacle_layer/include/virtual_obstacle_layer/: virtual_obstacle_layer.hpp
003 Code/virtual_obstacle_layer/src/: virtual_obstacle_layer.cpp
